--- a/src/index.hbs
+++ b/src/index.hbs
@@ -1,77 +1,108 @@
 {{> head
-  title='| propelling design & dev together'
-  social-desc='Accelerate into your future role at an unprecedented speed, without exploding into a ball of flames'
+  title='about tomorrow'
+  social-desc='about tomorrow'
 }}
 
 <main class="main">
 
-  <div class="section">
+  <div class="timeline__point">
+  </div>
+
+  <div class="section section--dt">
     <div class="container-fluid container-fluid--lg intro">
-      <div class="section section--nt">
-        <h1 class="headline text__center">
-          <span>propelling</span>
-          <span>design & dev</span>
-          <span>together</span>
-        </h1>
-      </div>
-      <p class="text__center fadein">
-        Accelerate into your future role at an&nbsp;<br class="hide__xs" />
-        unprecedented speed, without exploding&nbsp;<br class="hide__xs" />
-        into a ball of flames 🔥
-      </p>
+
+      <h1>
+        we are <br>
+        about tomorrow
+      </h1>
+
     </div>
   </div>
 
-  <div class="section section--lg">
-    <div class="container-fluid container-fluid--lg">
-      <div class="row">
-          <div class="col-8 col-md-4 offset-md-2 col-xl-5 offset-xl-1 circle-container">
-            <div class="circle circle--design">
-              <p class="circle__headline">
-                design
+  <div class="section section--dt section--db section--rounded">
+    <div class="rounded">
+      <div class="container-fluid container-fluid--lg intro">
+
+      </div>
+    </div>
+  </div>
+
+  <div class="section bg__dark section--dt section--db timeline">
+    <div class="timeline--bg-top">
+      <div class="container-fluid container-fluid--lg intro">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="card">
+              {{!-- <div class="card__bg"></div> --}}
+              <h3>Assignment 1</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, hic dignissimos veritatis rerum natus voluptas vel maxime ullam quia voluptatibus.
               </p>
-              <div class="svg-container circles">
-                <svg id="circle__svg-01" width="560" height="560" viewBox="0 0 560 560" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M398.631 440.018c-88.495 65.638-213.445 47.109-279.083-41.387-30.82-41.553-28.201-90.058-23.301-137.973 5.515-53.928 17.876-106.39 64.688-141.11 15.603-11.573 37.003-17.736 59.088-21.347 17.637-2.883 35.66-4.133 51.46-5.228 3.981-.276 7.821-.543 11.479-.823 33.08-2.534 61.741.382 87.423 11.059 25.678 10.675 48.42 29.125 69.633 57.726 14.635 19.731 21.267 44.813 23.853 70.708 2.586 25.893 1.121 52.548-.4 75.397-1.88 28.231-5.872 52.404-15.495 74.051-9.62 21.637-24.88 40.781-49.345 58.927z" stroke="url(#a)"/><defs><linearGradient id="a" x1="440.42" y1="160.637" x2="119.146" y2="398.929" gradientUnits="userSpaceOnUse"><stop stop-color="#FF3E7C"/><stop offset="1" stop-color="#FF00CF"/></linearGradient></defs></svg>
-                <svg id="circle__svg-02" width="550" height="550" viewBox="0 0 550 550" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M395.591 124.343c37.581 39.802 62.292 75.477 71.869 114.141 9.573 38.647 4.043 80.357-19.02 132.264-20.392 45.892-62.02 67.733-106.955 91.308a4075.063 4075.063 0 0 0-6.623 3.479c-28.72 15.121-54.049 21.527-78.671 18.868-24.624-2.658-48.61-14.39-74.628-35.674-47.983-39.254-62.743-69.561-78.094-101.082-1.297-2.662-2.598-5.334-3.923-8.02-15.504-31.417-22.178-60.613-20.074-90.08 2.105-29.47 12.992-59.254 32.679-91.839 27.216-45.045 69.809-76.072 123.071-89.739 59.195-15.188 116.433 9.841 160.369 56.374z" stroke="url(#a)"/><defs><linearGradient id="a" x1="103.426" y1="171.182" x2="445.789" y2="378.034" gradientUnits="userSpaceOnUse"><stop stop-color="#FF3E7C"/><stop offset="1" stop-color="#FF00CF"/></linearGradient></defs></svg>
-              </div>
+              <a class="btn" href="#">anzeigen</a>
             </div>
           </div>
-        <div class="col-8 offset-4 col-md-4 offset-md-0 col-xl-5 circle-container">
-          <div class="circle circle--dev">
-            <p class="circle__headline">
-              dev
-            </p>
+          <div class="col-md-4">
+
+          </div>
+          <div class="col-md-4">
+
           </div>
         </div>
       </div>
     </div>
   </div>
 
-  <div class="section">
-    <div class="container-fluid">
-      <p class="text__center fadein">
-        Collaborating with other WebDevs and&nbsp;<br class="hide__xs" />
-        Designers on cutting-edge projects.
-      </p>
-    </div>
-  </div>
+  <div class="section bg__dark timeline">
+    <div class="timeline--bg">
+      <div class="container-fluid container-fluid--lg intro">
+        <div class="row">
+          <div class="col-md-4">
 
-  <div class="section section--nb" id="newsletter">
-    <div class="container-fluid container-fluid--sm">
-      <div class="row">
-        <div class="col-md-12 newsletter">
-          <h2 class="newsletter__title">Want to know more?</h2>
-          <p class="newsletter__text">
-            This is just a teaser website where, for now,&nbsp;<br class="hide__xs" />
-            you can get in contact to find out more.
-          </p>
-        </div>
-        <div class="col-md-12">
-          {{> mailchimp }}
+          </div>
+          <div class="col-md-4">
+
+          </div>
+          <div class="col-md-4">
+            <div class="card">
+              {{!-- <div class="card__bg"></div> --}}
+              <h3>Assignment 2</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, hic dignissimos veritatis rerum natus voluptas vel maxime ullam quia voluptatibus.
+              </p>
+              <a class="btn" href="#">anzeigen</a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
+
+  <div class="section bg__dark section--db timeline">
+    <div class="timeline--bg-bottom">
+      <div class="container-fluid container-fluid--lg intro">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="card">
+              {{!-- <div class="card__bg"></div> --}}
+              <h3>Assignment 3</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, hic dignissimos veritatis rerum natus voluptas vel maxime ullam quia voluptatibus.
+              </p>
+              <a class="btn" href="#">anzeigen</a>
+            </div>
+          </div>
+          <div class="col-md-4">
+
+          </div>
+          <div class="col-md-4">
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
 
 </main>
 
