--- a/src/partials/head.hbs
+++ b/src/partials/head.hbs
@@ -2,7 +2,7 @@
 <html lang='en'>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>muse case labs {{ title }}</title>
+    <title>{{ title }}</title>
     <meta name="viewport" content="width=device-width">
     <meta name="robots" content="index, follow" />
     <meta name="keywords" content="muse case labs">
@@ -49,14 +49,11 @@
     <link rel="preload" href="/fonts/apercu-mono-webfont.woff" as="font" type="font/woff2" crossorigin>
 
     <!-- Stylesheets -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@200;300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css" rel="preload">
 
-    <!-- cookieyes banner -->
-    <script
-      id="cookieyes"
-      type="text/javascript"
-      src="https://cdn-cookieyes.com/client_data/6f5aa75633d30bffbc028cc9.js"
-    ></script>
   </head>
   <body class="body">
     <div class="background">
