--- a/src/partials/header.hbs
+++ b/src/partials/header.hbs
@@ -1,9 +1,12 @@
-<div class="burger">
-  <div class="burger__meat"></div>
-</div>
-
-<header>
-  <div class="section section--nb">
-    {{> logo }}
+<div class="section">
+  <div class="container-fluid container-fluid--lg">
+    <header>
+      <a href="#">abouttomorrow</a>
+      <ul class="menu">
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item 3</li>
+      </ul>
+    </header>
   </div>
-</header>
+</div>
