--- a/src/partials/logo.hbs
+++ b/src/partials/logo.hbs
@@ -1,48 +1,6 @@
-{{!-- <a href="/">
-  <img
-    src="images/muse-case-labs.svg"
-    alt="muse case labs logo"
-  />
-</a> --}}
-
 <a
   href="/"
   class="logo"
 >
-  <div class="logo__line-muse">
-    <img
-      src="images/logo-01-muse.svg"
-      alt="muse"
-      class="logo__muse"
-    />
-    <img
-      src="images/logo-01-muse.svg"
-      alt="muse"
-      class="logo__muse"
-    />
-  </div>
-  <div class="logo__line-case">
-    <img
-      src="images/logo-02-case.svg"
-      alt="case"
-      class="logo__case"
-    />
-    <img
-      src="images/logo-02-case.svg"
-      alt="case"
-      class="logo__case"
-    />
-  </div>
-  <div class="logo__line-labs">
-    <img
-      src="images/logo-03-labs.svg"
-      alt="labs"
-      class="logo__labs"
-    />
-    <img
-      src="images/logo-03-labs.svg"
-      alt="labs"
-      class="logo__labs"
-    />
-  </div>
+  about<span>tomorrow</span>
 </a>
