--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,8 +10,9 @@
   '_headlines',
   '_helpers',
   '_circles',
-  '_form',
   '_custom-cursor',
   '_footer',
   '_cookies',
+  '_timeline',
+  '_card',
   '_bootstrap';
