--- a/src/partials/footer.hbs
+++ b/src/partials/footer.hbs
@@ -1,59 +1,8 @@
-    <footer class="footer">
+    <footer class="footer bg__dark">
       <div class="container-fluid container-fluid--lg">
         <div class="section section--lg">
           <div class="row footer__row">
-            <div class="footer__col col-md-3">
-              {{> logo }}
-            </div>
-            <div class="footer__col col-md-3">
-              <p>Offices</p>
-              <p>
-                Berlin <br/>
-                Unter den Linden 26-30<br/>
-                10117 Berlin<br/>
-                Germany
-              </p>
-              <p>
-                Stuttgart <br/>
-                Mozartstraße 36a<br/>
-                70180 Stuttgart<br/>
-                Germany
-              </p>
-            </div>
-            <div class="footer__col col-md-3">
-              <p>Contact</p>
-                <ul>
-                  <li>
-                    <p class="nb">M</p>
-                    <a href="mailto:hello@muse-case-labs.com">hello@muse-case-labs.com</a>
-                  </li>
-                  <li>&nbsp;</li>
-                  <li>
-                    <p class="nb">P</p>
-                    <a href="tel:+4971112282474">+49 711 1228 2474</a>
-                  </li>
-                  </ul>
-            </div>
-            <div class="footer__col col-md-3">
-              <nav>
-                <ul>
-                  <li>
-                    <a href="./legal-notice.html">Legal notice</a>
-                  </li>
-                  <li>
-                    <a href="./privacy.html">Privacy</a>
-                  </li>
-                </ul>
-              </nav>
-            </div>
-          </div>
-          <div class="section section--nb">
-            <p class="copyright">
-              All rights reserved |
-              <span class="currentYear"></span>
-              muse&nbsp;case&nbsp;labs&nbsp;GmbH&nbsp;i.&nbsp;Gr.
-            </p>
-          </div>
+
         </div>
       </div>
     </footer>
