--- a/src/scss/_sections.scss
+++ b/src/scss/_sections.scss
@@ -28,7 +28,7 @@
   }
 
   &--db {
-    padding-top: calc(#{$section-gap-md} * 2);
+    padding-bottom: calc(#{$section-gap-md} * 2);
   }
 
   &--nt {
@@ -45,5 +45,21 @@
 
   &--line-top {
     border-top: 1px solid rgba(0,0,0,0.2);
+  }
+
+  &--rounded {
+    background-color: $color-gray-darker;
+    &:after {
+      content: '';
+      background-color: $color-brand-secondary;
+      border-bottom-left-radius: 100%;
+      border-bottom-right-radius: 100%;
+      height: 100%;
+      width: 120%;
+      position: absolute;
+      top: 0;
+      left: 50%;
+      transform: translateX(-50%);
+    }
   }
 }
