further styling and components

--- a/src/index.hbs
+++ b/src/index.hbs
@@ -11,10 +11,49 @@
   <div class="section section--dt">
     <div class="container-fluid container-fluid--lg intro">
 
+      <span class="handwritten">our journey</span>
       <h1>
         we are <br>
         about tomorrow
       </h1>
+
+    </div>
+  </div>
+  <div class="section section--nt section--nb">
+    <div class="container-fluid container-fluid--lg intro">
+
+      <div class="row">
+        <div class="col-md-2 col-6">
+          <div class="img-container">
+            <img src="images/Philipp.jpg">
+          </div>
+          <p>Philipp</p>
+        </div>
+        <div class="col-md-2 col-6">
+          <div class="img-container">
+            <img src="images/marcel.jpg">
+          </div>
+          <p>Marcel</p>
+        </div>
+        <div class="col-md-2 col-6">
+          <div class="img-container">
+            <img src="images/marvin.jpg">
+          </div>
+          <p>Marvin</p>
+        </div>
+        <div class="col-md-2 col-6">
+          <div class="img-container">
+            <img src="images/michael.jpg">
+          </div>
+          <p>Michael</p>
+        </div>
+        <div class="col-md-2 col-6">
+          <div class="img-container">
+            <img src="images/Flo.jpg">
+          </div>
+          <p>Florian</p>
+        </div>
+      </div>
 
     </div>
   </div>
@@ -27,6 +66,7 @@
     </div>
   </div>
 
+<div id="timeline">
   <div class="section bg__dark section--dt section--db timeline">
     <div class="timeline--bg-top">
       <div class="container-fluid container-fluid--lg intro">
@@ -101,7 +141,17 @@
       </div>
     </div>
   </div>
+</div>
 
+  <div class="section bg__dark section--db">
+    <div class="timeline--bg-bottom">
+      <div class="container-fluid container-fluid--lg intro">
+        <div class="row">
+
+        </div>
+      </div>
+    </div>
+  </div>
 
 
 </main>
