--- a/src/partials/header.hbs
+++ b/src/partials/header.hbs
@@ -2,11 +2,14 @@
   <div class="container-fluid container-fluid--lg">
     <header>
       <a href="#">abouttomorrow</a>
-      <ul class="menu">
-        <li>item 1</li>
-        <li>item 2</li>
-        <li>item 3</li>
-      </ul>
+        <div class="floating">
+          <ul class="menu">
+            <li>item 1</li>
+            <li>item 2</li>
+            <li>item 3</li>
+          </ul>
+          <div class="menu__mobile">menu</div>
+        </div>
     </header>
   </div>
 </div>
