--- a/src/partials/seo.hbs
+++ b/src/partials/seo.hbs
@@ -1,12 +1,7 @@
 <link
   rel="canonical"
-  href="https://www.muse-case-labs.com/{{social-url-path}}"
+  href="https://www.about-tomorrow.de/{{social-url-path}}"
 />
-
-{{!--
-<link rel="alternate" hreflang="x-default" href="https://www.muse-case-labs.com/{{social-url-path}}" />
-<link rel="alternate" hreflang="en" href="https://www.muse-case-labs.com/{{social-url-path}}" />
---}}
 
 <meta
   name="description"
@@ -20,17 +15,17 @@
 <meta
   property="og:url"
   {{#if social-url-path }}
-    content="https://www.muse-case-labs.com/{{social-url-path}}"
+    content="https://www.about-tomorrow.de/{{social-url-path}}"
   {{else}}
-    content="https://www.muse-case-labs.com/"
+    content="https://www.about-tomorrow.de/"
   {{/if}}
 />
 <meta
   property="og:image"
   {{#if social-image-path }}
-    content="https://www.muse-case-labs.com/{{social-image-path}}"
+    content="https://www.about-tomorrow.de/{{social-image-path}}"
   {{else}}
-    content="https://www.muse-case-labs.com/images/social.jpg"
+    content="https://www.about-tomorrow.de/images/social.jpg"
   {{/if}}
 />
 <meta property="og:image:type" content="image/jpeg" />
@@ -39,9 +34,9 @@
 <meta
   property="og:title"
   {{#if social-title }}
-    content="muse case labs | {{social-title}}"
+    content="about tomorrow | {{social-title}}"
   {{else}}
-    content="muse case labs"
+    content="about tomorrow"
   {{/if}}
 />
 <meta
@@ -57,9 +52,9 @@
 <meta
   name="twitter:title"
   {{#if social-title }}
-    content="muse case labs | {{social-title}}"
+    content="about tomorrow | {{social-title}}"
   {{else}}
-    content="muse case labs"
+    content="about tomorrow"
   {{/if}}
 />
 <meta
@@ -71,8 +66,8 @@
 <meta
   name="twitter:domain"
   {{#if social-url-path }}
-    content="https://www.muse-case-labs.com/{{social-url-path}}"
+    content="https://www.about-tomorrow.de/{{social-url-path}}"
   {{else}}
-    content="https://www.muse-case-labs.com/"
+    content="https://www.about-tomorrow.de/"
   {{/if}}
 />
