--- a/src/partials/header.hbs
+++ b/src/partials/header.hbs
@@ -1,14 +1,19 @@
 <div class="section">
   <div class="container-fluid container-fluid--lg">
     <header>
-      <a href="#">abouttomorrow</a>
+      <div class="logo">
+        <svg xmlns="http://www.w3.org/2000/svg" width="31.114" height="41.632" viewBox="0 0 21.114 31.632"><defs><style>.a{opacity:0.5;}.b{fill:#fff;}</style></defs><g class="a" transform="translate(-132.596 -158.888)"><path class="b" d="M212.937,209.7a.374.374,0,1,0-.374.374A.374.374,0,0,0,212.937,209.7Z" transform="translate(-69.411 -43.985)"/><path class="b" d="M143.153,158.888s-23.539,17.366-.32,31.438v-5.5l-3.487-1.98a1.032,1.032,0,1,1,.3-.568l3.191,1.812v-7.944l-3.418-1.857a1.017,1.017,0,1,1,.33-.549l3.088,1.677v-8.746a1.013,1.013,0,1,1,.64,0v4.3l2.683-2.254a1.016,1.016,0,1,1,.431.474l-3.113,2.616v9.981l4.407-2.414a1.018,1.018,0,1,1,.317.556l-4.724,2.588v7.8C166.692,176.254,143.153,158.888,143.153,158.888Z" transform="translate(0)"/><path class="b" d="M215.111,406.12Z" transform="translate(-71.958 -215.601)"/><circle class="b" cx="0.374" cy="0.374" r="0.374" transform="translate(146.708 167.94)"/><path class="b" d="M176.936,337.93a.374.374,0,1,0,.374-.374A.374.374,0,0,0,176.936,337.93Z" transform="translate(-38.667 -155.809)"/><path class="b" d="M257.651,314.966a.374.374,0,1,0-.374.374A.374.374,0,0,0,257.651,314.966Z" transform="translate(-108.404 -135.783)"/><path class="b" d="M177.831,270.732a.374.374,0,1,0,.374-.374A.374.374,0,0,0,177.831,270.732Z" transform="translate(-39.448 -97.208)"/></g></svg>
+      </div>
         <div class="floating">
           <ul class="menu">
-            <li>item 1</li>
-            <li>item 2</li>
-            <li>item 3</li>
+            <li>
+              <a href="#team">Team</a>
+            </li>
+            <li>
+              <a href="#timeline">Assignments</a>
+            </li>
           </ul>
-          <div class="menu__mobile">menu</div>
+          <div class="menu__mobile"></div>
         </div>
     </header>
   </div>
