--- a/src/scss/_logo.scss
+++ b/src/scss/_logo.scss
@@ -4,7 +4,7 @@ $size-md: 70px;
 .logo {
   position: relative;
   display: block;
-  overflow: hidden;
+  // overflow: hidden;
   width: $size;
   transition: all ease-in-out 0.3s;
 
