--- a/src/partials/footer.hbs
+++ b/src/partials/footer.hbs
@@ -1,32 +1,93 @@
-    <footer class="footer bg__dark">
+    <footer class="footer bg__darkest">
       <div class="container-fluid container-fluid--lg">
         <div class="section section--lg">
           <div class="row footer__row">
+            <div class="logo">
+              <svg xmlns="http://www.w3.org/2000/svg" width="31.114" height="41.632" viewBox="0 0 21.114 31.632"><defs><style>.a{opacity:0.5;}.b{fill:#fff;}</style></defs><g class="a" transform="translate(-132.596 -158.888)"><path class="b" d="M212.937,209.7a.374.374,0,1,0-.374.374A.374.374,0,0,0,212.937,209.7Z" transform="translate(-69.411 -43.985)"/><path class="b" d="M143.153,158.888s-23.539,17.366-.32,31.438v-5.5l-3.487-1.98a1.032,1.032,0,1,1,.3-.568l3.191,1.812v-7.944l-3.418-1.857a1.017,1.017,0,1,1,.33-.549l3.088,1.677v-8.746a1.013,1.013,0,1,1,.64,0v4.3l2.683-2.254a1.016,1.016,0,1,1,.431.474l-3.113,2.616v9.981l4.407-2.414a1.018,1.018,0,1,1,.317.556l-4.724,2.588v7.8C166.692,176.254,143.153,158.888,143.153,158.888Z" transform="translate(0)"/><path class="b" d="M215.111,406.12Z" transform="translate(-71.958 -215.601)"/><circle class="b" cx="0.374" cy="0.374" r="0.374" transform="translate(146.708 167.94)"/><path class="b" d="M176.936,337.93a.374.374,0,1,0,.374-.374A.374.374,0,0,0,176.936,337.93Z" transform="translate(-38.667 -155.809)"/><path class="b" d="M257.651,314.966a.374.374,0,1,0-.374.374A.374.374,0,0,0,257.651,314.966Z" transform="translate(-108.404 -135.783)"/><path class="b" d="M177.831,270.732a.374.374,0,1,0,.374-.374A.374.374,0,0,0,177.831,270.732Z" transform="translate(-39.448 -97.208)"/></g></svg>
+            </div>
+            <p>about tomorrow</p>
+          </div>
+          <div class="row footer__row">
+            <div class="col-md-4">
+              <p>
+                site
+              </p>
+              <ul>
+                <li>
+                  <a href="#team">team</a>
+                </li>
+                <li>
+                  <a href="#timeline">assignments</a>
+                </li>
+              </ul>
+            </div>
+            <div class="col-md-4">
+              <p>
+                downloads
+              </p>
+              <ul>
+                <li>
+                  <a>assignment 1</a>
+                </li>
+                <li>
+                  <a>assignment 2</a>
+                </li>
+                <li>
+                  <a>assignment 3</a>
+                </li>
+                <li>
+                  <a>assignment 4</a>
+                </li>
+                <li>
+                  <a>assignment 5</a>
+                </li>
+                <li>
+                  <a>assignment 6</a>
+                </li>
+              </ul>
+            </div>
+            <div class="col-md-4">
+              <p>
+                resources
+              </p>
+              <ul>
+                <li>
+                  compress images <br>
+                  <a href="https://tinypng.com" target="_blank" rel="noopener">tinypng.com</a>
+                </li>
+                <li>
+                  compress svgs <br>
+                  <a href="https://jakearchibald.github.io/svgomg" target="_blank" rel="noopener">jakearchibald.github.io/svgomg</a>
+                </li>
+                <li>
+                  website carbon calculator <br>
+                  <a href="https://www.websitecarbon.com/" target="_blank" rel="noopener">websitecarbon.com</a>
+                </li>
 
+              </ul>
+            </div>
+          </div>
+          <div class="row footer__row">
+            <div class="col-md-8">
+              <p>
+                © 2021 about tomorrow, All rights reserved
+              </p>
+            </div>
+            <div class="col-md-4">
+              <p>
+                Made with love in Stuttgart
+                {{!-- <svg xmlns="http://www.w3.org/2000/svg" width="31.114" height="41.632" viewBox="0 0 21.114 31.632"><defs><style>.a{opacity:0.5;}.b{fill:#fff;}</style></defs><g class="a" transform="translate(-132.596 -158.888)"><path class="b" d="M212.937,209.7a.374.374,0,1,0-.374.374A.374.374,0,0,0,212.937,209.7Z" transform="translate(-69.411 -43.985)"/><path class="b" d="M143.153,158.888s-23.539,17.366-.32,31.438v-5.5l-3.487-1.98a1.032,1.032,0,1,1,.3-.568l3.191,1.812v-7.944l-3.418-1.857a1.017,1.017,0,1,1,.33-.549l3.088,1.677v-8.746a1.013,1.013,0,1,1,.64,0v4.3l2.683-2.254a1.016,1.016,0,1,1,.431.474l-3.113,2.616v9.981l4.407-2.414a1.018,1.018,0,1,1,.317.556l-4.724,2.588v7.8C166.692,176.254,143.153,158.888,143.153,158.888Z" transform="translate(0)"/><path class="b" d="M215.111,406.12Z" transform="translate(-71.958 -215.601)"/><circle class="b" cx="0.374" cy="0.374" r="0.374" transform="translate(146.708 167.94)"/><path class="b" d="M176.936,337.93a.374.374,0,1,0,.374-.374A.374.374,0,0,0,176.936,337.93Z" transform="translate(-38.667 -155.809)"/><path class="b" d="M257.651,314.966a.374.374,0,1,0-.374.374A.374.374,0,0,0,257.651,314.966Z" transform="translate(-108.404 -135.783)"/><path class="b" d="M177.831,270.732a.374.374,0,1,0,.374-.374A.374.374,0,0,0,177.831,270.732Z" transform="translate(-39.448 -97.208)"/></g></svg> --}}
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </footer>
 
+    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/5.3.7/js/swiper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollTrigger.min.js"></script>
     <script src="./js/bundle.js"></script>
-    <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
-    <script type='text/javascript'>
-      (function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[1]='FNAME';ftypes[1]='text';fnames[0]='EMAIL';ftypes[0]='email';}(jQuery));var $mcj = jQuery.noConflict(true);
-    </script>
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script
-      data-cookieyes="cookieyes-analytics"
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-7WM7SMQQPP"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-7WM7SMQQPP');
-    </script>
   </body>
 </html>
