--- a/src/partials/head.hbs
+++ b/src/partials/head.hbs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html class="document" lang='en'>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>{{ title }}</title>
@@ -14,13 +14,13 @@
       <meta http-equiv="imagetoolbar" content="no"/>
     <![endif]-->
 
-    {{> seo
+    {{!-- {{> seo
       lang=lang
       social-title=social-title
       social-desc=social-desc
       social-image-path=social-image-path
       social-url-path=social-url-path
-    }}
+    }} --}}
 
     <link href="/images/splashscreens/iphone5_splash.png" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
     <link href="/images/splashscreens/iphone6_splash.png" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
@@ -49,8 +49,7 @@
     <link rel="preload" href="/fonts/apercu-mono-webfont.woff" as="font" type="font/woff2" crossorigin>
 
     <!-- Stylesheets -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/fontawesome.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@200;300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css" rel="preload">
 
