--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -2,7 +2,20 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  display: none;
+  // display: none;
+
+  a {
+    color: $color-brand-secondary;
+
+    &:hover {
+      color: $color-brand-secondary;
+    }
+  }
+
+  svg {
+    width: auto;
+    height: 5rem;
+  }
 
   .floating {
     position: fixed;
@@ -10,28 +23,45 @@ header {
     left: 50%;
     transform: translateX(-50%);
     z-index:40;
+
+    @media (min-width: $screen-md) {
+      position: relative;
+      bottom: auto;
+      left: auto;
+      transform: none;
+    }
   }
 
   ul {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     padding: 0;
   }
 
   li {
+    cursor: pointer;
     list-style: none;
-    padding: 1rem 2rem;
-    background-color: white;
+    padding: .25rem .75rem;
+    background-color: rgba($color-white, .3);
     color: #1e4f3d;
-    margin-bottom: 1rem;
+    margin-right: 1rem;
     border-radius: 2rem;
     text-align: center;
+    display: inline-block;
 
+    &:hover {
+      background-color: rgba($color-white, .6);
+    }
   }
 }
 
 .menu {
-  // display: none;
+  display: none;
+
+  @media (min-width: $screen-md) {
+    display: block;
+  }
+
   li {
     :not(:last-child){
       margin-right: 1rem;
@@ -44,5 +74,22 @@ header {
     border-radius: 2rem;
     color: $color-brand-secondary;
     z-index: 40;
+    min-height: 3rem;
+    position: relative;
+    display: none;
+
+    &:after,
+    &:before {
+      content: '';
+      width: 50%;
+      height: 1px;
+      background-color: $color-gray-darker;
+      position: absolute;
+      left: calc(50% - 25%);
+    }
+
+    &:after {
+      top: 25px
+    }
   }
 }
