--- a/src/scss/_sections.scss
+++ b/src/scss/_sections.scss
@@ -51,7 +51,7 @@
     background-color: $color-gray-darker;
     &:after {
       content: '';
-      background-color: $color-brand-secondary;
+      background-color: $color-brand-primary;
       border-bottom-left-radius: 100%;
       border-bottom-right-radius: 100%;
       height: 100%;
